--- a/login/public/index.html
+++ b/login/public/index.html
@@ -107,6 +107,19 @@
                 navigator.serviceWorker.register('/service-worker.js')
                     .then(registration => {
                         console.log('SW registered: ', registration);
+                        
+                        // Handle updates
+                        registration.addEventListener('updatefound', () => {
+                            const newWorker = registration.installing;
+                            newWorker.addEventListener('statechange', () => {
+                                if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                                    // New version available
+                                    if (confirm('גרסה חדשה זמינה! לרענן?')) {
+                                        window.location.reload();
+                                    }
+                                }
+                            });
+                        });
                     })
                     .catch(registrationError => {
                         console.log('SW registration failed: ', registrationError);
