Final fix: Suppress all Tailwind and PWA warnings
✅ Warning Suppression:
- Added data-tailwind-environment attribute
- Fixed beforeinstallprompt banner warning
- Clean console output
- Production-ready warnings suppressed

🎯 Goal:
- Clean console with no warnings
- Proper Tailwind CDN usage in production
- PWA install prompt working correctly
- Professional development experience

--- a/login/public/index.html
+++ b/login/public/index.html
@@ -138,6 +138,16 @@
             }
         });
         
+        // Suppress banner warning
+        window.addEventListener('DOMContentLoaded', () => {
+            if ('serviceWorker' in navigator && 'PushManager' in window) {
+                // Suppress banner warning by calling preventDefault early
+                window.addEventListener('beforeinstallprompt', (e) => {
+                    e.preventDefault();
+                });
+            }
+        });
+        
         document.addEventListener('DOMContentLoaded', () => {
             const installBtn = document.getElementById('install-prompt');
             if (installBtn) {
